added album covers

--- a/index.html
+++ b/index.html
@@ -32,18 +32,19 @@ then when save button is clicked, a message is shown that verifies. -->
         <div class="artist">August Burns Red</div>
       </div>
       <div class="album">
-        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f7/Messengers.jpg/220px-Messengers.jpg" alt="August burns red album">
-        <div class="title">Messengers</div>
-        <div class="artist">August Burns Red</div>
+        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/bd/Metallica_-_...And_Justice_for_All_cover.jpg/220px-Metallica_-_...And_Justice_for_All_cover.jpg" alt="Metallica album">
+        <div class="title">..And Justice For all</div>
+        <div class="artist">Metallica</div>
       </div>
       <div class="album">
-        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f7/Messengers.jpg/220px-Messengers.jpg" alt="August burns red album">
-        <div class="title">Messengers</div>
-        <div class="artist">August Burns Red</div>
-      </div><div class="album">
-        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f7/Messengers.jpg/220px-Messengers.jpg" alt="August burns red album">
-        <div class="title">Messengers</div>
-        <div class="artist">August Burns Red</div>
+        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/00/Tomorrow_We_Die_Alone.jpg/220px-Tomorrow_We_Die_Alone.jpg" alt="Born of Osiris album">
+        <div class="title">Tomorrow We Die Alive</div>
+        <div class="artist">Born of Osiris</div>
+      </div>
+      <div class="album">
+        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/cc/Evergreen_cover.jpg/220px-Evergreen_cover.jpg" alt="After the Burial album">
+        <div class="title">Evergreen</div>
+        <div class="artist">After the Burial</div>
       </div>
 
     </div>
