--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ then when save button is clicked, a message is shown that verifies. -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Albums!</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css" type="text/css">
   </head>
   <body>
@@ -19,7 +20,7 @@ then when save button is clicked, a message is shown that verifies. -->
         </div>
         <div class="info">
           <span>Download Complete</span>
-          <span>4 Items Saved</span>
+          <span class='items-total'>4 Items Saved</span>
         </div>
       </div>
     </div>
@@ -46,8 +47,13 @@ then when save button is clicked, a message is shown that verifies. -->
         <div class="title">Evergreen</div>
         <div class="artist">After the Burial</div>
       </div>
-
     </div>
+
+    <div style='text-align:center;'>
+      <div class="button">Save</div>
+    </div>
+
+    <script src = 'index.js'></script>
 
   </body>
 </html>
