--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@ then when save button is clicked, a message is shown that verifies. -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Albums!</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel='stylesheet'>
   </head>
   <body>
 
     <div class="notifications">
-      <div class="notification active">
+      <div class="notification tab">
         <div class="circle">
           <i class="fas fa-check-circle"></i>
         </div>
