--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ then when save button is clicked, a message is shown that verifies. -->
   <body>
 
     <div class="notifications">
-      <div class="notification tab">
+      <div class="notification">
         <div class="circle">
           <i class="fas fa-check-circle"></i>
         </div>
@@ -54,7 +54,7 @@ then when save button is clicked, a message is shown that verifies. -->
       <div class="button">Save</div>
     </div>
 
-    <script src = 'index.js'></script>
+    <script src='index.js'></script>
 
   </body>
 </html>
